--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Open Sans";
+}
+
+$primary:#37A121;
+$background:rgb(226, 225, 225);
+$white:rgb(241, 241, 241);
+$gray:gray;
+$black:rgb(30, 30, 30);
+
+
