--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -18,7 +18,7 @@
             width: 60px;
             height: 60px;
             border-radius: 50%;
-            background-color: rgb(205, 69, 69);
+            background-color: $avatar;
             display: flex;
             align-items: center;
             justify-content: center;
