--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,13 +3,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Open Sans";
+    font-family: "Poppins";
 }
 
 $primary:#37A121;
-$background:rgb(226, 225, 225);
+$background:rgb(247, 247, 247);
 $white:rgb(241, 241, 241);
 $gray:gray;
 $black:rgb(30, 30, 30);
+$avatar: rgb(205, 69, 69);
 
 
