--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -28,6 +28,9 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            img{
+              width: 250px;
+            }
         }
 
         .content {
@@ -59,7 +62,7 @@
 
     .streak{
         width: 100%;
-        background-color: $white;
+        background-color: rgb(235, 235, 235);
         border-radius: 30px;
         padding: 30px;
         margin-top: 40px;
@@ -80,21 +83,47 @@
                 text-align: center;
                 color: gray;
 
+                .day{
+                  &.green{
+
+                   color: rgb(248, 72, 18);
+                  }
+                  &.gray{
+                    color: $gray;
+
+                  }
+                }
                 .circle{
                     margin-top: 5px;
                     width: 25px;
                     height: 25px;
-                    background-color: $gray;
+                    background-color: rgb(187, 187, 187);
                     border-radius: 50%;
                     &.green{
 
-                        background-color: green;
+                      background-color: rgb(248, 72, 18);
+                      box-shadow: 2px 2px 10px tomato;
                     }
+                    &.gray{
+                      background-color: $gray;
+
+                    }
+
                 }
-                .green{
-                    background-color: green;
-                }
+
             }
         }
     }
+}
+
+.load{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $primary;
+  img{
+    width: 200px;
+  }
 }
