git final commit

--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -18,7 +18,7 @@
   <h1>Conquistas</h1>
   <ul class="conquistas">
     <li *ngFor="let conquista of [].constructor(totalConquistas); let i = index" [class.active]="i < level - 1">
-      <img src="/planta.png" alt="">
+      <img src="/7.png" alt="">
     </li>
   </ul>
 </div>
