--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -113,12 +113,13 @@
     flex-wrap: wrap;
     margin-top: 40px;
     gap: 24px;
+    overflow-y: scroll;
 
     li{
       list-style: none;
       img{
         filter: grayscale(1);
-        width: 50px;
+        width: 150px;
         filter: brightness(0);
       }
       &.active{
